[package]
name = "sharedvec"
version = "0.1.2"
description = "A fast but limited collection for storing values of a single type."
authors = ["Maximilian Köhl <mail@koehlma.de>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/koehlma/sharedvec-rs"
documentation = "https://docs.rs/sharedvec"
readme = "../README.md"

[dependencies]
serde = { version = "1", optional = true }