[package]
name = "stacko"
version = "0.1.0"
description = "A fast but limited collection for storing values of a single type."
authors = ["Maximilian Köhl <mail@koehlma.de>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/koehlma/stacko-rs"

[dependencies]
serde = { version = "1", optional = true }